--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -54,7 +54,16 @@
 		android:id="@+id/navigation_reward"
 		android:name="com.protect.jikigo.ui.reward.RewardFragment"
 		android:label="fragment_reward"
-		tools:layout="@layout/fragment_reward" />
+		tools:layout="@layout/fragment_reward">
+		<action
+			android:id="@+id/action_navigation_reward_to_ranking"
+			app:destination="@id/ranking" />
+	</fragment>
+	<fragment
+		android:id="@+id/ranking"
+		android:name="com.protect.jikigo.ui.rank.RankingFragment"
+		android:label="fragment_ranking"
+		tools:layout="@layout/fragment_ranking" />
 	<fragment
 		android:id="@+id/myPage"
 		android:name="com.protect.jikigo.ui.home.my_page.MyPageFragment"
