--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -85,6 +85,15 @@
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@id/tv_home_click_rank" />
 
+			<View
+				android:id="@+id/view_home_user_point"
+				android:layout_width="0dp"
+				android:layout_height="0dp"
+				app:layout_constraintBottom_toBottomOf="@id/tv_home_point"
+				app:layout_constraintEnd_toEndOf="@id/iv_home_point"
+				app:layout_constraintStart_toStartOf="@id/view_home_point"
+				app:layout_constraintTop_toTopOf="@id/tv_home_point" />
+
 			<androidx.appcompat.widget.AppCompatImageView
 				android:id="@+id/iv_point"
 				android:layout_width="wrap_content"
@@ -294,6 +303,7 @@
 				android:layout_marginHorizontal="10dp"
 				android:ellipsize="end"
 				android:maxLines="1"
+				android:textSize="12sp"
 				app:layout_constraintBottom_toBottomOf="@id/tv_home_notice_label1"
 				app:layout_constraintEnd_toEndOf="@id/view_home_notice"
 				app:layout_constraintStart_toEndOf="@id/tv_home_notice_label1"
@@ -317,6 +327,7 @@
 				android:layout_marginHorizontal="10dp"
 				android:ellipsize="end"
 				android:maxLines="1"
+				android:textSize="12sp"
 				app:layout_constraintBottom_toBottomOf="@id/tv_home_notice_label2"
 				app:layout_constraintEnd_toEndOf="@id/view_home_notice"
 				app:layout_constraintStart_toEndOf="@id/tv_home_notice_label2"
@@ -340,6 +351,7 @@
 				android:layout_marginHorizontal="10dp"
 				android:ellipsize="end"
 				android:maxLines="1"
+				android:textSize="12sp"
 				app:layout_constraintBottom_toBottomOf="@id/tv_home_notice_label3"
 				app:layout_constraintEnd_toEndOf="@id/view_home_notice"
 				app:layout_constraintStart_toEndOf="@id/tv_home_notice_label3"
