--- a/app/src/main/res/layout/dialog_ranking.xml
+++ b/app/src/main/res/layout/dialog_ranking.xml
@@ -42,22 +42,16 @@
                 app:layout_constraintTop_toBottomOf="@id/iv_dialog_ranking_close_dialog"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/tab_indicator"/>
+                app:layout_constraintBottom_toTopOf="@id/indicator_dialog_rainking"/>
 
-            <!-- 페이지 인디케이터 (점) -->
             <com.google.android.material.tabs.TabLayout
-                android:id="@+id/tab_indicator"
-                android:layout_width="wrap_content"
+                android:id="@+id/indicator_dialog_rainking"
+                style="@style/AppTabIndicatorStyle"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:tabIndicatorHeight="0dp"
-                app:tabSelectedTextColor="@android:color/black"
-                app:tabTextColor="@android:color/darker_gray"
-                app:tabGravity="center"
-                app:tabMode="fixed"
-                app:layout_constraintTop_toBottomOf="@id/vp_dialog_ranking"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:paddingTop="12dp"/>
+                android:layout_marginEnd="22dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
