--- a/app/src/main/res/layout/fragment_news_environment_air.xml
+++ b/app/src/main/res/layout/fragment_news_environment_air.xml
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="22dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" /> />
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
