--- a/app/src/main/res/layout/dialog_ranking.xml
+++ b/app/src/main/res/layout/dialog_ranking.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
 
     <!-- 다이얼로그 배경 -->
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="330dp"
+        android:layout_height="400dp"
         android:layout_margin="20dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="8dp"
+        app:cardElevation="0dp"
         android:background="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +49,7 @@
                 style="@style/AppTabIndicatorStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="22dp"
+                android:layout_marginEnd="130dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
