--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -104,15 +104,13 @@
     <!-- 사용자 프로필 원형 이미지 -->
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_ranking_my_profile"
-        android:layout_width="220dp"
-        android:layout_height="220dp"
+        android:layout_width="240dp"
+        android:layout_height="240dp"
         app:shapeAppearanceOverlay="@style/RankingMyProfileRoundedImage"
         android:scaleType="centerCrop"
         android:elevation="5dp"
         android:src="@drawable/img_today_news_home_tmp_1"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="400dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cl_ranking_steps_and_trees" />
@@ -126,9 +124,7 @@
         android:textSize="12sp"
         android:textColor="@android:color/white"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="220dp"
-        app:layout_constraintTop_toBottomOf="@id/cl_ranking_steps_and_trees"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@id/cv_ranking_my_profile"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -139,10 +135,8 @@
         android:layout_height="20dp"
         android:src="@drawable/ic_help"
         app:tint="#ffffff"
-        android:layout_marginTop="220dp"
         android:layout_marginEnd="17dp"
-        android:layout_marginBottom="13dp"
-        app:layout_constraintTop_toBottomOf="@id/cl_ranking_steps_and_trees"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@id/cv_ranking_my_profile"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -150,10 +144,10 @@
         android:id="@+id/cv_ranking_my_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="20dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="6dp"
-        android:layout_marginTop="100dp"
         app:layout_constraintTop_toBottomOf="@id/iv_ranking_my_profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
