--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -75,7 +75,8 @@
         app:layout_constraintTop_toBottomOf="@id/sv_notification"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"/>
+        android:layout_marginTop="5dp"
+        android:visibility="gone"/>
 
     <!-- "전체보기" 버튼 (초기 GONE, 검색 후 VISIBLE) -->
     <TextView
@@ -88,7 +89,8 @@
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sv_notification" />
+        app:layout_constraintTop_toBottomOf="@id/sv_notification"
+        android:visibility="gone"/>
 
 
     <!-- 공지사항 리스트 (RecyclerView) -->
@@ -96,7 +98,7 @@
         android:id="@+id/rv_notification"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_notification_search_result"
+        app:layout_constraintTop_toBottomOf="@id/sv_notification"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
