--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -23,7 +23,7 @@
         app:titleTextColor="@color/black" />
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tabLayout"
+        android:id="@+id/tabLayout_travel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/primary"
@@ -35,31 +35,26 @@
         app:tabTextAppearance="@style/TabText">
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_item_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="HOME" />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_item_accommodation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="숙박" />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_item_leisure"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="레저/티켓" />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_item_performance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="공연/전시" />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tab_item_travel_goods"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="여행용품" />
@@ -72,6 +67,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+        app:layout_constraintTop_toBottomOf="@id/tabLayout_travel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
