--- a/app/src/main/res/layout/fragment_travel_search.xml
+++ b/app/src/main/res/layout/fragment_travel_search.xml
@@ -128,7 +128,13 @@
                         android:layout_height="wrap_content"
                         android:checkable="false"
                         android:text="검색어1"
-                        app:checkedIconEnabled="false" />
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        app:checkedIconEnabled="false"
+                        app:chipBackgroundColor="@color/gray_5"
+                        app:chipStrokeColor="@color/gray_5"
+                        app:closeIconSize="16dp"
+                        app:closeIconTint="@color/gray_50" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_history2"
@@ -137,7 +143,13 @@
                         android:layout_height="wrap_content"
                         android:checkable="false"
                         android:text="검색어2"
-                        app:checkedIconEnabled="false" />
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        app:checkedIconEnabled="false"
+                        app:chipBackgroundColor="@color/gray_5"
+                        app:chipStrokeColor="@color/gray_5"
+                        app:closeIconSize="16dp"
+                        app:closeIconTint="@color/gray_50" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_history3"
@@ -146,7 +158,13 @@
                         android:layout_height="wrap_content"
                         android:checkable="false"
                         android:text="검색어3"
-                        app:checkedIconEnabled="false" />
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        app:checkedIconEnabled="false"
+                        app:chipBackgroundColor="@color/gray_5"
+                        app:chipStrokeColor="@color/gray_5"
+                        app:closeIconSize="16dp"
+                        app:closeIconTint="@color/gray_50" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_history4"
@@ -155,7 +173,13 @@
                         android:layout_height="wrap_content"
                         android:checkable="false"
                         android:text="검색어4"
-                        app:checkedIconEnabled="false" />
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        app:checkedIconEnabled="false"
+                        app:chipBackgroundColor="@color/gray_5"
+                        app:chipStrokeColor="@color/gray_5"
+                        app:closeIconSize="16dp"
+                        app:closeIconTint="@color/gray_50" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_history5"
@@ -164,7 +188,13 @@
                         android:layout_height="wrap_content"
                         android:checkable="false"
                         android:text="검색어5"
-                        app:checkedIconEnabled="false" />
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        app:checkedIconEnabled="false"
+                        app:chipBackgroundColor="@color/gray_5"
+                        app:chipStrokeColor="@color/gray_5"
+                        app:closeIconSize="16dp"
+                        app:closeIconTint="@color/gray_50" />
 
                     <com.google.android.material.chip.Chip
                         android:id="@+id/chip_history6"
@@ -173,7 +203,13 @@
                         android:layout_height="wrap_content"
                         android:checkable="false"
                         android:text="검색어 6"
-                        app:checkedIconEnabled="false" />
+                        android:textColor="@color/black"
+                        android:textSize="12sp"
+                        app:checkedIconEnabled="false"
+                        app:chipBackgroundColor="@color/gray_5"
+                        app:chipStrokeColor="@color/gray_5"
+                        app:closeIconSize="16dp"
+                        app:closeIconTint="@color/gray_50" />
 
                 </com.google.android.material.chip.ChipGroup>
             </HorizontalScrollView>
