--- a/app/src/main/res/layout/item_coupon.xml
+++ b/app/src/main/res/layout/item_coupon.xml
@@ -20,10 +20,11 @@
         app:strokeWidth="0dp">
 
         <ImageView
-            android:id="@+id/iv_coupon_thumnail"
+            android:id="@+id/iv_coupon_detail_thumnail"
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            android:background="#F4F4F4" />
+            android:background="#F4F4F4"
+            android:scaleType="centerCrop" />
     </com.google.android.material.card.MaterialCardView>
 
     <TextView
