--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,13 @@
 		<item name="android:textSize">14sp</item>
 	</style>
 
+	<!-- 커스텀 칩 -->
+	<style name="customChip" parent="@style/Widget.Material3.Chip.Suggestion">
+		<item name = "chipBackgroundColor">@color/selector_chip_background_color</item>
+		<item name = "chipStrokeColor">@color/selector_chip_stroke_color</item>
+		<item name = "android:textColor">@color/selector_chip_text_color</item>
+		<item name = "android:textSize">12sp</item>
+	</style>
 
 
 </resources>
