--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -107,7 +107,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        />
 
     <!-- "전체보기" 버튼 (초기 GONE, 검색 후 VISIBLE) -->
     <TextView
@@ -121,7 +122,8 @@
         android:textSize="11sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sv_notification"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        />
 
 
     <!-- 공지사항 리스트 (RecyclerView) -->
@@ -129,7 +131,7 @@
         android:id="@+id/rv_notification"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/sv_notification"
+        app:layout_constraintTop_toBottomOf="@id/tv_notification_view_all"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
