--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,7 +14,7 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		app:menu="@menu/menu_home_toolbar" />
+		app:menu="@menu/menu_my_page_toolbar" />
 
 	<androidx.core.widget.NestedScrollView
 		android:layout_width="0dp"
