--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -7,15 +7,25 @@
     android:background="#7A8FFF"
     tools:context=".ui.rank.RankingFragment">
 
-    <!-- 툴바 (투명, 뒤로가기 버튼) -->
+
+    <!-- 툴바 -->
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_ranking"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@android:color/transparent"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        app:title=""
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:navigationIcon="@drawable/ic_arrow_back_white"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/tv_toolbar_ranking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="랭킹"
+            android:textSize="18sp"
+            android:textColor="#ffffff"
+            android:layout_gravity="center" />
+    </androidx.appcompat.widget.Toolbar>
 
     <!-- 통계 정보 (걸음 수 & 나무 수) -->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -162,8 +172,9 @@
             <!-- 랭킹 번호 -->
             <TextView
                 android:id="@+id/tv_ranking_my_profile_rank"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="60dp"
+                android:layout_weight="0.7"
                 android:text="138"
                 android:textSize="32sp"
                 android:textStyle="bold"
