--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -172,10 +172,9 @@
             <!-- 랭킹 번호 -->
             <TextView
                 android:id="@+id/tv_ranking_my_profile_rank"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="60dp"
-                android:layout_weight="0.7"
-                android:text="138"
+                android:text="6"
                 android:textSize="32sp"
                 android:textStyle="bold"
                 android:gravity="center_vertical"
