--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -177,6 +177,7 @@
                 android:text="6"
                 android:textSize="32sp"
                 android:textStyle="bold"
+                android:layout_marginStart="5dp"
                 android:gravity="center_vertical"
                 android:textColor="#7A8FFF"/>
 
