--- a/app/src/main/res/layout/fragment_travel_coupon.xml
+++ b/app/src/main/res/layout/fragment_travel_coupon.xml
@@ -24,55 +24,10 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.chip.ChipGroup
-                android:id="@+id/cg_history"
+                android:id="@+id/cg_coupon_brand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:singleSelection="true">
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_history1"
-                    style="@style/customChip"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:checked="true"
-                    android:text="전체보기" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_history2"
-                    style="@style/customChip"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="브랜드이름" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_history3"
-                    style="@style/customChip"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="브랜드이름" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_history4"
-                    style="@style/customChip"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="브랜드이름" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_history5"
-                    style="@style/customChip"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="브랜드이름" />
-
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_history6"
-                    style="@style/customChip"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="브랜드이름" />
-
-            </com.google.android.material.chip.ChipGroup>
+                app:singleSelection="true"/>
         </HorizontalScrollView>
 
         <TextView
@@ -113,7 +68,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_coupon_list"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="18dp"
