--- a/app/src/main/res/layout/item_coupon.xml
+++ b/app/src/main/res/layout/item_coupon.xml
@@ -5,7 +5,8 @@
     android:layout_width="180dp"
     android:layout_height="wrap_content"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp">
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="16dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
