Feat: 공지사항 클릭시 공지사항 상세페이지 이동

--- a/app/src/main/res/navigation/home_graph.xml
+++ b/app/src/main/res/navigation/home_graph.xml
@@ -47,7 +47,11 @@
 		android:id="@+id/notificationDetail"
 		android:name="com.protect.jikigo.ui.home.noti.NotificationDetailFragment"
 		android:label="fragment_notification_detail"
-		tools:layout="@layout/fragment_notification_detail" />
+		tools:layout="@layout/fragment_notification_detail">
+		<argument
+			android:name="notification"
+			app:argType="com.protect.jikigo.data.Notification" />
+	</fragment>
 
 	<fragment
 		android:id="@+id/newsEnvironment"
