--- a/app/src/main/res/layout/fragment_find_account.xml
+++ b/app/src/main/res/layout/fragment_find_account.xml
@@ -25,4 +25,13 @@
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@id/toolbar_find_account" />
 
+	<androidx.viewpager2.widget.ViewPager2
+		android:id="@+id/vp_find_account"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@id/tab_layout_find_account" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
