--- a/app/src/main/res/layout/fragment_sign_up_first.xml
+++ b/app/src/main/res/layout/fragment_sign_up_first.xml
@@ -86,6 +86,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginHorizontal="40dp"
 		android:layout_marginBottom="70dp"
+		android:enabled="false"
 		android:text="@string/sign_up_confirm"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
